# base-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ARTIFACTS.md  BROWSER.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  MCP.md  MEMORY.md  ORCHESTRATION.md  POSTGRES.md  PROVIDERS.md  REDIS.md  REFERENCE_DESIGN.md  RESOURCES.md  RUNS.md  SANDBOX.md  SERVER.md  SKILLS.md  TESTING.md  TOOLS.md  TROUBLESHOOTING.md
examples/: hello_agent.py  human_input_agent.py  server_app.py  tool_agent.py
examples/skill_agent/: run.py
examples/skill_agent/skills/weather-analysis/: SKILL.md
src/base_agent/: __init__.py  agent.py  profiles.py  run_handle.py
src/base_agent/artifacts/: __init__.py  manager.py
src/base_agent/browser/: __init__.py  models.py  playwright.py  protocol.py  tools.py
src/base_agent/mcp/: __init__.py  client.py  tool.py  transports.py
src/base_agent/memory/: __init__.py  manager.py  protocol.py  store.py
src/base_agent/models/: __init__.py  artifact.py  event.py  input.py  memory.py  message.py  model.py  plan.py  result.py  run.py  skill.py  tool.py
src/base_agent/orchestration/: __init__.py  model_tool.py  planning.py  protocol.py  supervision.py
src/base_agent/postgres/: __init__.py  schema.py  store.py
src/base_agent/providers/: __init__.py  errors.py  openai_chat.py  protocol.py
src/base_agent/redis/: __init__.py  store.py
src/base_agent/resources/: __init__.py  manager.py  models.py
src/base_agent/runtime/: __init__.py  checkpoint.py  context.py  engine.py  persistence.py  state_machine.py
src/base_agent/sandbox/: __init__.py  docker.py  models.py  protocol.py  tools.py
src/base_agent/server/: __init__.py  app.py  schemas.py  tasks.py
src/base_agent/skills/: __init__.py  errors.py  loader.py  models.py  registry.py  validator.py
src/base_agent/stores/: __init__.py  errors.py  memory.py  protocol.py
src/base_agent/supervision/: __init__.py  composite.py  decision.py  policies.py  protocol.py
src/base_agent/testing/: __init__.py  fake_model.py  harness.py
src/base_agent/tools/: __init__.py  context.py  decorator.py  errors.py  executor.py  protocol.py  registry.py
starter/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
starter/src/agent_app/: __init__.py  __main__.py  agent.py  cli.py  config.py  providers.py  server.py  tools.py
starter/src/agent_app/skills/text-analysis/: SKILL.md
starter/tests/: test_agent.py  test_skill.py
tests/: test_artifacts.py  test_browser.py  test_developer_experience.py  test_fake_model.py  test_import.py  test_mcp.py  test_memory.py  test_models.py  test_openai_chat_provider.py  test_orchestration.py  test_postgres.py  test_redis.py  test_resources.py  test_resume.py  test_run_handle.py  test_runs.py  test_runtime.py  test_sandbox.py  test_server.py  test_skills.py  test_starter.py  test_supervision.py  test_tools.py
tests/fixtures/: mcp_server.py
