[project]
name = "agent-app"
version = "0.1.0"
description = "A copyable application starter built on base-agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "base-agent>=0.1,<0.2",
]

[project.optional-dependencies]
openai = [
    "base-agent[openai]>=0.1,<0.2",
]
server = [
    "base-agent[server]>=0.1,<0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[project.scripts]
agent-app = "agent_app.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agent_app"]
mypy_path = "src"
